feat: implement offers module with service logic, validation, and unit tests and ensure module to be split to sub folders
